increased navigation button size

--- a/src/assets/custom_styles.css
+++ b/src/assets/custom_styles.css
@@ -6,3 +6,10 @@
     border-color: Black; */
     width:300px;
 }
+
+.navigation_button
+{
+    font-size:18px;
+    width:25%;
+    height:30px;
+}
